test: build lists without varargs for snapshot tests